Fixed navbar z-index

--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ html, body {
   height: 8rem;
   background-color: #000;
   box-shadow: 0rem 0.5rem 1rem rgba(0, 0, 0, 0.5);
-  z-index: 1000; }
+  z-index: 9999; }
   .nav_brand {
     display: inline-block;
     position: absolute;
